--- a/style.css
+++ b/style.css
@@ -76,3 +76,12 @@ nav {
 .h2 {
     padding: 20px 20px;
 }
+
+.loginContainer {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    width: 50%;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
