--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -1,3 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+
 .topContainer_about {
     background-color:  #052534;
     overflow: hidden;
@@ -84,13 +92,83 @@
 }
 
 .heading{
-  font-family: 'Halant';
+font-family: 'Halant';
 font-style: normal;
 font-weight: 600;
 font-size: 32px;
 line-height: 97.5%;
 /* or 31px */
 text-align: center;
-
+margin-top: 25px;
+margin-bottom: 25px;
 color: #000000;
+}
+
+.heading h4 {
+  margin-top: 25px;
+}
+
+.about-us {
+    display: flex;
+    align-items: center;
+    width: 85% ;
+    margin: auto;
+}
+
+.about-us img {
+    flex: 0 50%;
+    max-width: 50%;
+    height: auto;
+}
+
+.content{
+    padding: 35px;
+    margin-bottom: 25px;
+}
+
+.content h2{
+    font: size 24px;
+    margin: 15px 0px;
+}
+
+.content p
+{
+    color: rgb(64, 64, 64);
+    font-size: 18px;
+    line-height: 1.5;
+    margin: 15px 0px;
+}
+
+.contact-button{
+    display: inline-block;
+    color:#fff;
+    background-color: #0084ff;
+    border: none;
+    border-radius: 5px;
+    padding: 12px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.2s ease; 
+}
+
+.contact-button:hover{
+    background-color: #006dd6;
+}
+
+@media(max-width: 768px) {
+    .about-us {
+        flex-direction: column;
+    }
+    .about-us img {
+        flex: 0 100%;
+        max-width: 100%;
+    }
+}
+
+.abImg {
+    background-image: url(images/about-construction.jpeg);
+    min-height: 250px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
