--- a/style_aboutus.css
+++ b/style_aboutus.css
@@ -172,3 +172,17 @@ color: #000000;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.Image{
+  float: left;
+  height: 80px;
+  width: auto;
+}
+
+.pageLogo {
+  float: left;
+  width: auto;
+  height: 80px;
+  margin: .5%;
+  position: absolute;
+}
