--- a/style_contact.css
+++ b/style_contact.css
@@ -40,7 +40,7 @@
   }
   
   /* Change the color of links on hover */
-  .topContainer_about a:hover {
+  .topContainer_contact a:hover {
     background-color: #ddd;
     color: black;
   }
