Completed readme.md document

--- a/homeStyle.css
+++ b/homeStyle.css
@@ -1,7 +1,7 @@
-/* Megan ^-^ */
-nav a:hover{ /* */
+/* Megan ^-^ 
+nav a:hover{ /* 
     background-color:rgb(235, 231, 231);
-}
+} */
 
 .topnav { /*This is the navigation for the homepage. Unlike the other pages, the nav has no background.*/
     overflow: hidden;
