--- a/dashboard/adminDash.css
+++ b/dashboard/adminDash.css
@@ -5,8 +5,9 @@
 
 .card {
     width: 25%; 
-    box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.02);
-    border-bottom:7px solid rgba(11, 63, 87, 1);
+    height: 200px;
+    box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.05);
+    border-bottom:8px solid rgba(11, 63, 87, 1);
     border-left: 1px solid rgba(214, 214, 214, 1);
     border-right: 1px solid rgba(214, 214, 214, 1);
     border-top: 1px solid rgba(214, 214, 214, 1);
@@ -16,28 +17,22 @@
 }
 
 .card h2, .bigBox h2 {
-    text-align: center;
     font-family: sans-serif;
     font-size: 30px;
     font-weight: 400;
-    line-height: 31px;
+    line-height: 30px;
     letter-spacing: -0.02em;
+    padding-left: 5px;
 }
 
 .bigBox {
     width: 75%;
-    box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.02);
-    border-bottom:7px solid rgba(11, 63, 87, 1);
+    height: 350px;
+    box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.05);
+    border-bottom:8px solid rgba(11, 63, 87, 1);
     border-left: 1px solid rgba(214, 214, 214, 1);
     border-right: 1px solid rgba(214, 214, 214, 1);
     border-top: 1px solid rgba(214, 214, 214, 1);
     margin: 1%;
     margin: auto;
 }
-.column {
-    float: left;
-    width: 25%;
-    padding: 0 10px;
-    font-size: 10px;
-  }
-  .row {margin: 0 -5px;}
