--- a/dashboard/conDash.css
+++ b/dashboard/conDash.css
@@ -20,7 +20,7 @@
     padding: 10px 10px 10px 10px;
 }
 
-.card h2, .bigBox h2 {
+.card h2, .bigBox h2, .bigBoxContractor h2 {
     font-family: sans-serif;
     font-size: 32px;
     font-weight: 400;
@@ -29,15 +29,16 @@
     padding-left: 5px;
 }
 
-.card a, .bigBox a {
+.card a, .bigBox a, .bigBoxContractor a {
     color: blue;
     text-decoration: none;
     font-size: 18px;
     font-family: sans-serif;
     padding: 15px;
+    line-height: 28px;
 }
 
-.bigBox {
+.bigBox, .bigBoxContractor {
     width: 75%;
     height: 350px;
     box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.05);
@@ -49,6 +50,14 @@
     margin: auto;
     padding: 10px 10px 10px 10px;
 }
+
+.bigBox {
+    background-image: url("workRequestForm.png");
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .column {
     float: left;
     width: 25%;
