--- a/style.css
+++ b/style.css
@@ -164,19 +164,49 @@ color: #000000;
 /* ************************************/ 
 /* Ryan css changes */
 .registrationContainer {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+
+.fieldSet {
+  margin: auto;
+  margin-top: 35px;
+  margin-bottom: 35px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width: 60%;
-  margin: 10px;
-  margin-top: 40px;
-  text-align: left;
+  padding: 1em 2em;
+  border: solid 1px #ccc;
+  border-radius: 6px;
 }
 
-.registrationInnerCard {
-  padding: 20px 50px;
+.title {
+  font-size: 2.5em;
+  padding: 0 .25em;
+  color: #646464;
+  width: auto;
+  border-bottom: none;
+  margin-bottom: 0;
 }
 
-.h2 {
-  padding: 20px 20px;
+label {
+  margin-top: 1em;
+  text-align: center;
+}
+
+input {
+  padding: .3em;
+  border: solid 1px #999;
+}
+
+input[type="text"] {
+  width: 15em;
+}
+
+textarea {
+  min-width: 50%;
+  min-height: 8em;
+  padding: .5em;
+  border: solid 1px #999;
 }
 
 .loginContainer {
