#LI-69 PARTIAL: temp js addition to contract dash

--- a/dashboard/conDash.css
+++ b/dashboard/conDash.css
@@ -65,3 +65,16 @@
     font-size: 10px;
   }
   .row {margin: 0 -5px;}
+
+  /* */
+  #containerProfile {
+    display: none;
+    margin: auto;
+    margin-left: 8%;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding: 1em 2em;
+    border: solid 1px #ccc;
+    border-radius: 6px;
+  }
+
