--- a/dashboard/clientDash.css
+++ b/dashboard/clientDash.css
@@ -260,6 +260,18 @@ iframe {
   padding: 10px 10px 10px 10px;
 }
 
+.bigBoxClient{
+  width: 75%;
+  box-shadow: 5px -5px 14px 5px rgba(0, 0, 0, 0.05);
+  border-bottom:8px solid rgba(11, 63, 87, 1);
+  border-left: 1px solid rgba(214, 214, 214, 1);
+  border-right: 1px solid rgba(214, 214, 214, 1);
+  border-top: 1px solid rgba(214, 214, 214, 1);
+  margin: 1%;
+  margin: auto;
+  padding: 10px 10px 10px 10px;
+}
+
 .bigBox {
   background-image: url("workRequestForm.png");
   background-size:contain;
@@ -297,6 +309,23 @@ iframe {
 
 .profileRowAttribute{
   width:75%;
+  margin-bottom: 16px;
+}
+
+.profileRow label{
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.profileRowAttributeLabel{
+  width:75%;
+  color: rgb(0, 0, 0);
+  padding: 10px 15px;
+  background-color: rgb(191, 220, 231);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .profileHeading{
@@ -318,4 +347,50 @@ iframe {
 .editProfileButton:hover{
   background-color: rgb(226, 225, 225);
   border: solid 1.5px;
+}
+
+.registrationContainer {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+
+.fieldSet {
+  margin: auto;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  padding: 1em 2em;
+  border: solid 1px #ccc;
+  border-radius: 6px;
+}
+
+.title {
+  font-size: 2.5em;
+  padding: 0 .25em;
+  color: #646464;
+  width: auto;
+  border-bottom: none;
+  margin-bottom: 0;
+}
+
+label {
+  margin-top: 1em;
+  text-align: center;
+}
+
+input {
+  padding: .3em;
+  border: solid 1px #999;
+}
+
+input[type="text"] {
+  width: 15em;
+}
+
+textarea {
+  min-width: 50%;
+  min-height: 8em;
+  padding: .5em;
+  border: solid 1px #999;
 }
